--- a/estilo.css
+++ b/estilo.css
@@ -3,14 +3,138 @@ body{
 	padding:0;
 	background:#3498db;
 }
+.jogo{
+	position:relative;
+	text-align: center;
+	width:90%;
+	height:auto;
+	max-height: 600px;
+	margin:20px auto;
+	/*border:1px solid #000;*/
+}
+.forca{
+	position:relative;
+	width:250px;
+	height:70%;
+	margin:40px 0 0 60px;
+	/*border:1px solid #000;*/
+}
+.elementos,.boneco{
+	border:0;
+	position:absolute;
+	margin:0;
+}
+.partes{
+	position:relative;
+	background:#F2BE8C;
+}
+.elementos{
+	background:#C45710;
+}
+.base{
+	bottom:0;
+	width:150px;
+	height:25px;
+	border-top-left-radius: 25px;
+	border-top-right-radius: 25px;
+	box-shadow: 0px 2px 0px #000;
+}
+.mastro{
+	left:60px;
+	width:25px;
+	height:100%;
+	box-shadow: -2px 0px 0px #000;
+	border:0;
+	border-radius: 3px;
+}
+.topo{
+	width:100%;
+	height:20px;
+	box-shadow: 0px 2px 0px #000;
+}
+.gancho{
+	width:20px;
+	height:20px;
+	right:0;
+	top:20px;
+	box-shadow: 0px 2px 0px #000;
+}
+.boneco{
+	top:40px;
+	bottom:0;
+	right:0;
+	width:100px;
+	height:88%;
+	/*border:1px solid #000;*/
+	float:right;
+	margin-right:-40px;
 
-.letras{
-	margin:100px auto 0 auto;
+}
+.cabeca{
+	margin:0 auto;
+	width:50px;
+	height:50px;
+	border-radius:100%;
+}
+.corpo{
+	margin:-5 auto;
+	width:15px;
+	height: 25%;
+}
+
+.bracos{
+	position:absolute;
+	margin:0 auto;
+	top:45px;
+}
+.braco-esq{
+	left:22px;
+	float:left;
+}
+.braco-dir{
+	right:22px;
+	float:right;
+}
+.bracos,.pe-esq,.pe-dir{
+	width:13px;
+	height:50px;
+}
+.braco-esq, .pe-esq{
+	-webkit-transform:rotate(45deg);
+	-moz-transform:rotate(45deg);
+	-ms-transform:rotate(45deg);
+	transform:rotate(45deg);
+}
+
+.braco-dir,.pe-dir{
+	-webkit-transform:rotate(-45deg);
+	-moz-transform:rotate(-45deg);
+	-ms-transform:rotate(-45deg);
+	transform:rotate(-45deg);
+}
+.pe-esq, .pe-dir{
+	top:-25px;
+}
+
+.pe-esq{
+	left:30px;
+	float:left;
+}
+.pe-dir{
+	right:30px;
+	float:right;
+}
+
+.teclado{
+	position:absolute;
+	bottom:0;
+	left:50%;
+	margin:100px auto 0 -275px;
 	width:550px;
-	height:200px;
 	/*border: 1px solid #000;*/
 	text-align: center;
 }
+
 .btn{
 	display: inline-block;
 	margin:5px;
